2009-03-16  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/mb/hd-status-menu.c (hd_status_menu_init): Move resize/center to
	hildon-status-menu.

2009-03-13  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_unregister_client):
	  Regression fix: closing a window stack in tasw segfaulted
	  because unregister_client() forgot to remove the secondary's
	  actor from the switcher.

2009-03-13  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	When not enough memory is available for launching an app, show a notification
	and allow the user to close other apps.

	* src/home/hd-switcher.c:
	* src/launcher/hd-app-mgr.c:
	* src/launcher/hd-launcher.c:

2009-03-13  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/util/hd-transition.c (hd_transition_subview):
	  Regression workaround: after the transition to the subview
	  the main view wouldn't update anymore.

2009-03-13  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_unregister_client):
	  Fix sigsegv that happened on Rover after closing web browser
	opened from RSS reader

2009-03-13  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#105295 Giving a Missed call in potrait mode changes
	          the orientation to landscape

	Actually not changes but crashed hd.

	* src/home/hd-render-manager.c (hd_render_manager_is_client_visible):
	  Tolerate actors of clients in the window stack which are not
	  child of the_render_manager.  This may occurr when the client
	  is in the stack but was not mapped on wm-side.
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_map_notify):
	  Fix misleading comment.

	Don't tell me it's 13rd Friday again!

2009-03-12  Gordon Williams <gordon.williams@collabora.co.uk>

	Fix for app relaunch transition.

	* src/launcher/hd-app-mgr.h
	* src/launcher/hd-app-mgr.c: Split hd_app_mgr_relaunch out into
	  hd_app_mgr_relaunch_set_top 
	* src/home/hd-render-manager.h: tidying up